# warehouse-stocks-api

./: .dockerignore  Dockerfile  Makefile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml
controllers/: order_controller.py  product_controller.py
db/: connect.py  models.py  schemas.py
routers/: order_router.py  product_router.py
tests/: conftest.py  test_orders.py  test_products.py
